trying to fix misaligned arrows

--- a/ValidationWeb/Content/Styles/validationportal.css
+++ b/ValidationWeb/Content/Styles/validationportal.css
@@ -880,6 +880,12 @@ h3, .h3 {
     font-size: 1.2em;
 }
 
+/*.edge--table-fix::after,
+.edge--table-fix::before,
+.edge--table-fix:focus::after,
+.edge--table-fix:focus::before {
+    bottom: 12px !important;
+}*/
 
 table.dataTable thead .sorting::before,
 table.dataTable thead .sorting::after {
@@ -935,40 +941,6 @@ table.dataTable thead.table-primary th.sorting_desc:focus {
     table.dataTable thead.table-primary th.sorting_desc:focus::before {
         color: white;
     }
-
-/*table.dataTable thead th.sorting_asc::after {
-    color: rgb(184, 218, 255);
-}
-
-table.dataTable thead th.sorting_desc::before {
-    color: rgb(184, 218, 255);
-}*/
-
-/*
-    table.dataTable thead :focus {
-    opacity: 1.0 !important;
-    border-color: greenyellow;
-}
-
-table.dataTable thead.sorting_asc :focus ::before {
-    color: rgb(0, 56, 101);
-}
-
-table.dataTable thead :focus {
-    color: orange; 
-opacity: 1 !important;
-}
-    table.dataTable thead.sorting :focus ::before {
-        color: blue;
-        opacity: 1 !important;
-    }
-    table.dataTable thead.sorting :focus ::after {
-        color: blue;
-        opacity: 1 !important;
-    }
-
-}*/
-
 
 .table-primary th {
     border-color: #003865;
